name:                cis194
version:             0.1.0.0
synopsis:            My solutions to the CIS 194 Haskell course
description:         Please see README.md
homepage:            http://github.com/githubuser/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Hery
maintainer:          hi@nicolashery.com
copyright:           2015 Nicolas Hery
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Homework.A.CreditCard,
    Homework.A.Hanoi
  build-depends:       base >= 4.7 && < 5

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5,
                       cis194,
                       hspec
